Removed Ultrasonic code

--- a/RobotBuilder.yml
+++ b/RobotBuilder.yml
@@ -323,77 +323,6 @@ Children:
     Properties:
       Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
         name: Default Command, type: Command, validators: null, value: DriveWithJoyStickCommand}
-  - Name: Ultrasonic
-    Base: Subsystem
-    Children:
-    - Name: right
-      Base: Analog Input
-      Children: []
-      Properties:
-        Input Module (Analog): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id016 ['1', '2']
-          default: '1'
-          name: Input Module (Analog)
-          validators: &id017 [AnalogInput]
-          value: '1'
-        Input Channel (Analog): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id018 ['1', '2', '3', '4', '5', '6', '7', '8']
-          default: '1'
-          name: Input Channel (Analog)
-          validators: &id019 [AnalogInput]
-          value: '1'
-    - Name: left
-      Base: Analog Input
-      Children: []
-      Properties:
-        Input Module (Analog): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id016
-          default: '1'
-          name: Input Module (Analog)
-          validators: *id017
-          value: '1'
-        Input Channel (Analog): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id018
-          default: '1'
-          name: Input Channel (Analog)
-          validators: *id019
-          value: '2'
-    - Name: front
-      Base: Analog Input
-      Children: []
-      Properties:
-        Input Module (Analog): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id016
-          default: '1'
-          name: Input Module (Analog)
-          validators: *id017
-          value: '1'
-        Input Channel (Analog): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id018
-          default: '1'
-          name: Input Channel (Analog)
-          validators: *id019
-          value: '3'
-    - Name: output
-      Base: Digital Output
-      Children: []
-      Properties:
-        Output Module (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: ['1', '2']
-          default: '1'
-          name: Output Module (Digital)
-          validators: [DigitalChannel]
-          value: '1'
-        Output Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12',
-            '13', '14']
-          default: '1'
-          name: Output Channel (Digital)
-          validators: [DigitalChannel]
-          value: '9'
-    Properties:
-      Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
-        name: Default Command, type: Command, validators: null, value: None}
   - Name: Photoswitch
     Base: Subsystem
     Children:
@@ -425,28 +354,28 @@ Children:
       Children: []
       Properties:
         Forward Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id024 ['1', '2', '3', '4', '5', '6', '7', '8']
+          choices: ['1', '2', '3', '4', '5', '6', '7', '8']
           default: '1'
           name: Forward Channel (Solenoid)
-          validators: &id025 [Solenoid]
+          validators: [Solenoid]
           value: '3'
         Forward Module (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id026 ['1', '2']
+          choices: ['1', '2']
           default: '1'
           name: Forward Module (Solenoid)
-          validators: &id027 [Solenoid]
+          validators: [Solenoid]
           value: '1'
         Reverse Module (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id028 ['1', '2']
+          choices: ['1', '2']
           default: '1'
           name: Reverse Module (Solenoid)
-          validators: &id029 [Solenoid]
+          validators: [Solenoid]
           value: '1'
         Reverse Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id030 ['1', '2', '3', '4', '5', '6', '7', '8']
+          choices: ['1', '2', '3', '4', '5', '6', '7', '8']
           default: '1'
           name: Reverse Channel (Solenoid)
-          validators: &id031 [Solenoid]
+          validators: [Solenoid]
           value: '4'
     - Name: motor
       Base: Speed Controller
@@ -538,33 +467,33 @@ Children:
       Children: []
       Properties:
         Input Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id020 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+          choices: &id016 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
             '12', '13', '14']
           default: '1'
           name: Input Channel (Digital)
-          validators: &id021 [DigitalChannel]
+          validators: &id017 [DigitalChannel]
           value: '13'
         Input Module (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id022 ['1', '2']
+          choices: &id018 ['1', '2']
           default: '1'
           name: Input Module (Digital)
-          validators: &id023 [DigitalChannel]
+          validators: &id019 [DigitalChannel]
           value: '1'
     - Name: in
       Base: Limit Switch
       Children: []
       Properties:
         Input Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id020
+          choices: *id016
           default: '1'
           name: Input Channel (Digital)
-          validators: *id021
+          validators: *id017
           value: '12'
         Input Module (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id022
+          choices: *id018
           default: '1'
           name: Input Module (Digital)
-          validators: *id023
+          validators: *id019
           value: '1'
     Properties:
       Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
@@ -572,34 +501,70 @@ Children:
   - Name: Catapult
     Base: Subsystem
     Children:
-    - Name: solenoid
-      Base: Double Solenoid
+    - Name: right
+      Base: Solenoid
       Children: []
       Properties:
-        Forward Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+        Output Module (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
+          choices: &id020 ['1', '2']
           default: '1'
-          name: Forward Channel (Solenoid)
-          validators: *id025
-          value: '5'
-        Forward Module (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
-          default: '1'
-          name: Forward Module (Solenoid)
-          validators: *id027
+          name: Output Module (Solenoid)
+          validators: &id021 [Solenoid]
           value: '1'
-        Reverse Module (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id028
+        Output Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
+          choices: &id022 ['1', '2', '3', '4', '5', '6', '7', '8']
           default: '1'
-          name: Reverse Module (Solenoid)
-          validators: *id029
+          name: Output Channel (Solenoid)
+          validators: &id023 [Solenoid]
           value: '1'
-        Reverse Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id030
+    - Name: left
+      Base: Solenoid
+      Children: []
+      Properties:
+        Output Module (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id020
           default: '1'
-          name: Reverse Channel (Solenoid)
-          validators: *id031
-          value: '6'
+          name: Output Module (Solenoid)
+          validators: *id021
+          value: '1'
+        Output Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id022
+          default: '1'
+          name: Output Channel (Solenoid)
+          validators: *id023
+          value: '2'
+    - Name: latched
+      Base: Limit Switch
+      Children: []
+      Properties:
+        Input Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id016
+          default: '1'
+          name: Input Channel (Digital)
+          validators: *id017
+          value: '14'
+        Input Module (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id018
+          default: '1'
+          name: Input Module (Digital)
+          validators: *id019
+          value: '1'
+    - Name: down
+      Base: Limit Switch
+      Children: []
+      Properties:
+        Input Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id016
+          default: '1'
+          name: Input Channel (Digital)
+          validators: *id017
+          value: '9'
+        Input Module (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id018
+          default: '1'
+          name: Input Module (Digital)
+          validators: *id019
+          value: '1'
     Properties:
       Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
         name: Default Command, type: Command, validators: null, value: None}
@@ -618,10 +583,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: &id032 [TypeDropdownSelected]
+          validators: &id024 [TypeDropdownSelected]
           value: ExtendArmCommand
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id033 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+          choices: &id025 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
             '12']
           default: '1'
           name: Button
@@ -630,7 +595,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: moveStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id034 [whileHeld, whenPressed, whenReleased]
+          choices: &id026 [whileHeld, whenPressed, whenReleased]
           default: whileHeld
           name: When to Run
           validators: null
@@ -643,10 +608,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id032
+          validators: *id024
           value: RetractArmCommand
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id033
+          choices: *id025
           default: '1'
           name: Button
           validators: null
@@ -654,17 +619,17 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: moveStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id034
+          choices: *id026
           default: whileHeld
           name: When to Run
           validators: null
           value: whenPressed
     Properties:
       Number: !!robotbuilder.data.properties.ChoicesProperty
-        choices: &id035 ['1', '2', '3', '4']
+        choices: &id027 ['1', '2', '3', '4']
         default: 1
         name: Number
-        validators: &id036 [Joystick]
+        validators: &id028 [Joystick]
         value: '1'
   - Name: rotateStick
     Base: Joystick
@@ -677,10 +642,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id032
+          validators: *id024
           value: WallsOutCommand
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id033
+          choices: *id025
           default: '1'
           name: Button
           validators: null
@@ -688,7 +653,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: rotateStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id034
+          choices: *id026
           default: whileHeld
           name: When to Run
           validators: null
@@ -701,10 +666,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id032
+          validators: *id024
           value: WallsInCommand
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id033
+          choices: *id025
           default: '1'
           name: Button
           validators: null
@@ -712,17 +677,41 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: rotateStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id034
+          choices: *id026
+          default: whileHeld
+          name: When to Run
+          validators: null
+          value: whenPressed
+    - Name: ResetEncodersButton
+      Base: Joystick Button
+      Children: []
+      Properties:
+        Command: !!robotbuilder.data.properties.TypeSelectionProperty
+          default: None
+          name: Command
+          type: Command
+          validators: *id024
+          value: ResetEncodersCommand
+        Button: !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id025
+          default: '1'
+          name: Button
+          validators: null
+          value: '8'
+        Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
+          name: Joystick, validators: null, value: rotateStick}
+        When to Run: !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id026
           default: whileHeld
           name: When to Run
           validators: null
           value: whenPressed
     Properties:
       Number: !!robotbuilder.data.properties.ChoicesProperty
-        choices: *id035
+        choices: *id027
         default: 1
         name: Number
-        validators: *id036
+        validators: *id028
         value: '2'
   Properties: {}
 - Name: Commands
@@ -782,14 +771,6 @@ Children:
     Properties:
       Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
         name: Requires, type: Subsystem, validators: null, value: Arm}
-      Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
-        name: Button on SmartDashboard, validators: null, value: true}
-  - Name: ShootCommand
-    Base: Command
-    Children: []
-    Properties:
-      Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
-        name: Requires, type: Subsystem, validators: null, value: Catapult}
       Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
         name: Button on SmartDashboard, validators: null, value: true}
   - Name: ShootOnTargetTestCommand
@@ -886,6 +867,14 @@ Children:
         name: Requires, type: Subsystem, validators: null, value: None}
       Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
         name: Button on SmartDashboard, validators: null, value: false}
+  - Name: ResetEncodersCommand
+    Base: Command
+    Children: []
+    Properties:
+      Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
+        name: Requires, type: Subsystem, validators: null, value: None}
+      Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
+        name: Button on SmartDashboard, validators: null, value: true}
   Properties: {}
 Properties:
   Autonomous Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
