--- a/RobotBuilder.yml
+++ b/RobotBuilder.yml
@@ -590,6 +590,44 @@ Children:
     Properties:
       Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
         name: Default Command, type: Command, validators: null, value: None}
+  - Name: Lights
+    Base: Subsystem
+    Children:
+    - Name: spike1
+      Base: Spike
+      Children: []
+      Properties:
+        Output Module (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: &id024 ['1', '2']
+          default: '1'
+          name: Output Module (Digital)
+          validators: &id025 [RelayOutput]
+          value: '1'
+        Output Channel (Relay): !!robotbuilder.data.properties.ChoicesProperty
+          choices: &id026 ['1', '2', '3', '4', '5', '6', '7', '8']
+          default: '1'
+          name: Output Channel (Relay)
+          validators: &id027 [RelayOutput]
+          value: '2'
+    - Name: spike2
+      Base: Spike
+      Children: []
+      Properties:
+        Output Module (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id024
+          default: '1'
+          name: Output Module (Digital)
+          validators: *id025
+          value: '1'
+        Output Channel (Relay): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id026
+          default: '1'
+          name: Output Channel (Relay)
+          validators: *id027
+          value: '3'
+    Properties:
+      Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
+        name: Default Command, type: Command, validators: null, value: None}
   Properties: {}
 - Name: Operator Interface
   Base: OI
@@ -605,10 +643,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: &id024 [TypeDropdownSelected]
+          validators: &id028 [TypeDropdownSelected]
           value: ExtendArmCommand
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id025 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+          choices: &id029 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
             '12']
           default: '1'
           name: Button
@@ -617,7 +655,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: moveStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id026 [whileHeld, whenPressed, whenReleased]
+          choices: &id030 [whileHeld, whenPressed, whenReleased]
           default: whileHeld
           name: When to Run
           validators: null
@@ -630,10 +668,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id024
+          validators: *id028
           value: RetractArmCommand
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id025
+          choices: *id029
           default: '1'
           name: Button
           validators: null
@@ -641,17 +679,17 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: moveStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id030
           default: whileHeld
           name: When to Run
           validators: null
           value: whenPressed
     Properties:
       Number: !!robotbuilder.data.properties.ChoicesProperty
-        choices: &id027 ['1', '2', '3', '4']
+        choices: &id031 ['1', '2', '3', '4']
         default: 1
         name: Number
-        validators: &id028 [Joystick]
+        validators: &id032 [Joystick]
         value: '1'
   - Name: rotateStick
     Base: Joystick
@@ -664,10 +702,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id024
+          validators: *id028
           value: WallsOutCommand
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id025
+          choices: *id029
           default: '1'
           name: Button
           validators: null
@@ -675,7 +713,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: rotateStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id030
           default: whileHeld
           name: When to Run
           validators: null
@@ -688,10 +726,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id024
+          validators: *id028
           value: WallsInCommand
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id025
+          choices: *id029
           default: '1'
           name: Button
           validators: null
@@ -699,7 +737,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: rotateStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id030
           default: whileHeld
           name: When to Run
           validators: null
@@ -712,10 +750,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id024
+          validators: *id028
           value: ResetEncodersCommand
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id025
+          choices: *id029
           default: '1'
           name: Button
           validators: null
@@ -723,17 +761,17 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: rotateStick}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id030
           default: whileHeld
           name: When to Run
           validators: null
           value: whenPressed
     Properties:
       Number: !!robotbuilder.data.properties.ChoicesProperty
-        choices: *id027
+        choices: *id031
         default: 1
         name: Number
-        validators: *id028
+        validators: *id032
         value: '2'
   Properties: {}
 - Name: Commands
